fix: fixing layout of cards container - fixing layout of cards container in the projects section - changing the flex flow from column to row wrap to make it responsive to screen width

--- a/p1-web-dev-portfolio/assets/css/style.css
+++ b/p1-web-dev-portfolio/assets/css/style.css
@@ -96,6 +96,10 @@
   cursor: pointer;
 }
 
+/* enable this to fixed the nav show/unshow */
+/* .fa-bars{
+  position: fixed;
+} */
 .nav__links--sml-scr{
   /* border: 1px solid purple; */
   border-top: 1px solid var(--medium-blue);
@@ -379,9 +383,9 @@
 .cards__container{
   width: 90%;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
+  flex-flow: row wrap;
   align-items: center;
+  justify-content: center;
   gap: 1.5rem;
 }
 
